--- a/apps/nirn-proxy/base/statefulset.yaml
+++ b/apps/nirn-proxy/base/statefulset.yaml
@@ -1,23 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: nirn-discovery
-  namespace: nirn-system
-  labels:
-    app: nirn-proxy
-spec:
-  clusterIP: None
-  selector:
-    app: nirn-proxy
-  ports:
-    - name: metrics
-      port: 9000
-      targetPort: 9000
-    - name: gossip
-      port: 7946
-    - name: http
-      port: 8080
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -36,7 +16,7 @@ spec:
     spec:
       containers:
       - name: proxy
-        image: ghcr.io/davfsa/nirn-proxy:v0.0.31
+        image: ghcr.io/davfsa/nirn-proxy
         env:
         - name: CLUSTER_DNS
           value: "nirn-discovery.nirn-system.svc.cluster.local"
@@ -51,19 +31,3 @@ spec:
           containerPort: 7946
         - name: metrics
           containerPort: 9000
----
-apiVersion: operator.victoriametrics.com/v1beta1
-kind: VMServiceScrape
-metadata:
-  name: nirn-proxy-monitor
-  namespace: nirn-system
-  labels:
-    app.kubernetes.io/instance: m-stack
-spec:
-  selector:
-    matchLabels:
-      app: nirn-proxy 
-  endpoints:
-  - port: metrics 
-    path: /metrics
-    interval: 15s
