Add affinity rules to nirn-proxy StatefulSet for better scheduling

--- a/apps/nirn-proxy/base/statefulset.yaml
+++ b/apps/nirn-proxy/base/statefulset.yaml
@@ -14,6 +14,27 @@ spec:
       labels:
         app: nirn-proxy
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchLabels:
+                  app: nirn-proxy
+              topologyKey: "kubernetes.io/hostname"
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            preference:
+              matchExpressions:
+              - key: node-role.kubernetes.io/master
+                operator: DoesNotExist
+          - weight: 100
+            preference:
+              matchExpressions:
+              - key: node-role.kubernetes.io/control-plane
+                operator: DoesNotExist
       containers:
       - name: proxy
         image: ghcr.io/davfsa/nirn-proxy
