--- a/apps/nirn-proxy/base/statefulset.yaml
+++ b/apps/nirn-proxy/base/statefulset.yaml
@@ -52,3 +52,15 @@ spec:
           containerPort: 7946
         - name: metrics
           containerPort: 9000
+        livenessProbe:
+          httpGet:
+            path: /nirn/healthz
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /nirn/healthz
+            port: http
+          initialDelaySeconds: 5
+          periodSeconds: 5
